[project]
name = "prisonmaps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "nbqa>=1.9.1",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "ruff>=0.11.13",
    "shapely>=2.1.1",
]
